--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vitalmove-demo",
+  "name": "vitalmove-netlify",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -9,6 +9,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
