--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vitalmove-styled",
+  "name": "vitalmove-exercise-detail",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
