--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vitalmove-jumpingjacks-final",
+  "name": "vitalmove-final",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
